|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-07-04 Raphael Geissert
	- MAKEFILE:
		* Fixed #463: Makefile error

2007-07-03 Raphael Geissert
	- GUI:
		* Fixed (really) #442: Can't create or delete mysql databases

2007-07-01 Raphael Geissert
	- GUI:
		* Other minor i18n corrections
		* Fixed extra > in reseller order email setup
		* Replaced, deleted and optimised some images
		* Fixed Makefile so imagecode.php is now correctly copied
		* Fixed #442: Can't create or delete mysql databases
	- SETUP:
		* Fixed #436: PHP files are downloadable and not interpreted

2007-07-01 Benedikt Heintel
	- CONFIGS:
		* Fixed #451: reload of apache after logrotate
	- DISTS:
		* Dropped support for SuSE 9.3
		* Changed SuSE 10.0 to SuSE 10 to support all SuSE versions above 10

2007-07-01 Raphael Geissert
	- GUI:
		* Corrected some i18n strings
		* Fixed #450: duplicated require '../include/ispcp-lib.php';
		* Fixed #444: move gui/include/imagecode.php to gui/imagecode.php
	- SETUP:
		* Fixed #453: hard coded path for apache module

2007-06-29 Raphael Geissert
	- DOCS:
		* Added rkhunter to Ubuntu edgy's packages list
	- GUI:
		* Fixed some i18n stuff
		* Fixed #434: Undefined variable: cfg in /var/www/ispcp/gui/include/vfs.php on line 162
		* Fixed #442: Cant create or delete mysql databases

2007-06-26 Raphael Geissert
	- GUI:
		* Fixed #438: Incorrect e-mail range or syntax! when adding a reseller
		* Deleting from admin log everything older than 3 months wasn't supported by code
		* Corrected many spelling mistakes and made improvements on i18n

2007-06-25 Raphael Geissert
	- SETUP:
		* Fixed #433: PMA's blowfish key contains a single quote character
	- GUI:
		* Fixed #432: Call to undefined function ispcp_domain_check()